// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RepayWithWalletBalanceForm - Feature flag enabled: integratedSwap > displays correct swap details 1`] = `"You will repay≈ 999.999999 XVSSlippage tolerance0.5%Price impact< 0.01%"`;

exports[`RepayWithWalletBalanceForm - Feature flag enabled: integratedSwap > displays correct swap details 2`] = `"You will repay 999.999999 XVS using 299.99K BUSD"`;

exports[`RepayWithWalletBalanceForm - Feature flag enabled: integratedSwap > lets user swap and repay full loan 1`] = `
[
  {
    "poolComptrollerContractAddress": "0x94d1820b2d1c7c7452a163983dc888cec546b77d",
    "poolName": "Venus",
    "repayFullLoan": true,
    "swap": {
      "direction": "exactAmountOut",
      "exchangeRate": "0.00333333333333333333",
      "expectedFromTokenAmountSoldMantissa": "3e+23",
      "fromToken": {
        "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-busd-asset",
        "symbol": "BUSD",
      },
      "maximumFromTokenAmountSoldMantissa": "3e+23",
      "priceImpactPercentage": 0.001,
      "routePath": [
        "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
        "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
      ],
      "toToken": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-xvs-asset",
        "symbol": "XVS",
      },
      "toTokenAmountReceivedMantissa": "1e+21",
    },
    "vToken": {
      "address": "0x6d6F697e34145Bb95c54E77482d97cc261Dc237E",
      "chainId": 97,
      "decimals": 8,
      "symbol": "vXVS",
      "underlyingToken": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-xvs-asset",
        "symbol": "XVS",
      },
    },
  },
]
`;

exports[`RepayWithWalletBalanceForm - Feature flag enabled: integratedSwap > lets user swap and repay partial loan then calls onClose callback on success 1`] = `
[
  {
    "poolComptrollerContractAddress": "0x94d1820b2d1c7c7452a163983dc888cec546b77d",
    "poolName": "Venus",
    "repayFullLoan": false,
    "swap": {
      "direction": "exactAmountIn",
      "exchangeRate": "0.00333333333333333333",
      "expectedToTokenAmountReceivedMantissa": "999999999999999999900",
      "fromToken": {
        "address": "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-busd-asset",
        "symbol": "BUSD",
      },
      "fromTokenAmountSoldMantissa": "2.999999999999999999999e+23",
      "minimumToTokenAmountReceivedMantissa": "999999999999999999900",
      "priceImpactPercentage": 0.001,
      "routePath": [
        "0x8301F2213c0eeD49a7E28Ae4c3e91722919B8B47",
        "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
      ],
      "toToken": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-xvs-asset",
        "symbol": "XVS",
      },
    },
    "vToken": {
      "address": "0x6d6F697e34145Bb95c54E77482d97cc261Dc237E",
      "chainId": 97,
      "decimals": 8,
      "symbol": "vXVS",
      "underlyingToken": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-xvs-asset",
        "symbol": "XVS",
      },
    },
  },
]
`;
